# mollerdb

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  PYPI_SETUP.md  README.md  SCHEMA_INTEGRATION.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  docker.yml  pages.yml  release.yml
docs/: PYPI_SETUP.md  README.md  SCHEMA_INTEGRATION.md  _sidebar.md  index.html
include/mollerdb/: Database.h
include/mollerdb/schema/: qwparity_schema.h
python/: bindings.cpp
python/mollerdb/: __init__.py
schema/: README.md  custom_types.csv  qwparity_schema.sql
scripts/: generate_schema.sh
src/: Database.cpp
tests/: README.md
tests/cpp/: CMakeLists.txt  test_database.cpp
tests/python/: __init__.py  conftest.py  test_basic.py  test_database.py  test_integration.py
